--- a/react-portfolio/src/components/About/index.scss
+++ b/react-portfolio/src/components/About/index.scss
@@ -32,7 +32,6 @@
 
 
 
-
     }
 
 
@@ -46,11 +45,13 @@
     .face3 {
         transform: rotateY(90deg) rotateX(90deg) translateZ(100px);
     }
+
+    
     .face4 {
         transform: rotateY(180deg) rotateZ(90deg) translateZ(100px);
     }
     .face5 {
-        transform: rotateY(-90deg) rotateZ(90deg) transateZ(100px);
+        transform: rotateY(-90deg) rotateZ(90deg) translateZ(100px);
     }
     .face6 {
         transform: rotateX(-90deg) translateZ(100px);
