Fixed the text animation error for the titles

--- a/react-portfolio/src/components/Layout/index.scss
+++ b/react-portfolio/src/components/Layout/index.scss
@@ -113,8 +113,9 @@
     }
     .text-animate-hover {
         &:hover {
-            color: #ffff;
+            color: #fff;
         }
     }
 
 }
+
