--- a/react-portfolio/src/components/Home/index.scss
+++ b/react-portfolio/src/components/Home/index.scss
@@ -45,10 +45,14 @@
         }
 
         img {
-            width: 32px;
+            width: 40px;
+            height: 65px;
+            position: relative;
             margin-left: 20px;
+            margin-bottom: 0px;
             opacity: 0;
-            height: auto;
+            top: 10px;
+
             animation: rotateIn 1s linear both;
             animation-delay: 1.4s;
 
