--- a/react-portfolio/src/components/Contact/index.scss
+++ b/react-portfolio/src/components/Contact/index.scss
@@ -76,7 +76,8 @@
 .info-map {
     position: absolute;
     background-color: #000;
-    top: 50px;right: 30%;
+    top: 80px;
+    right: 20%;
     z-index: 999999;
     width: 267;
     padding: 20px;
@@ -99,7 +100,7 @@
 .map-wrap {
     background: rgba (9, 253, 216, 0.1);
     float: right;
-    width: 53%;
+    width: 45%;
     height: 100%;
     left: 50px;
 }
