--- a/react-portfolio/src/components/Home/Logo/index.scss
+++ b/react-portfolio/src/components/Home/Logo/index.scss
@@ -8,7 +8,9 @@
     bottom: -50px;
     left: auto;
     margin: auto;
-    opacity: 0;
+    // opacity: 0;
+    position: absolute;
+    // animation: fade-in 4s 4s;
 
     svg {
         width: 100%;
@@ -27,12 +29,29 @@
         margin: auto;
         width: 100%;
         opacity: 0;
+        // transition: opacity 4s ease-in-out;
+        animation: fadeInAnimation 3.5s ease-in-out forwards;
+        animation-delay: 3.5s;
         transform: rotateZ(30deg) !important;
         z-index: 1;
 
 
     }
+    @keyframes fadeInAnimation {
+        from {
+            opacity: 0;
+        }
+        to {
+            opacity: 1;
+        }
+    }
+
+    // .solid-logo.show {
+    //     opacity: 1;
+    // }
+
 }
+
 
 .svg-container {
     stroke: #ffd700;
